# temper

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  rust.yml
assets/data/configs/: main-config.toml
scripts/: check-release-version.sh
src/adapters/anvil/benches/: anvil.rs
src/app/cli/: Cargo.toml
src/app/import/: Cargo.toml
src/app/runtime/: Cargo.toml
src/app/runtime/src/: blocklist.rs  game_loop.rs  lib.rs  (+1 more)
src/app/validate/: Cargo.toml
src/base/general_purpose/: Cargo.toml
src/base/logging/: Cargo.toml
src/base/macros/: Cargo.toml
src/base/profiling/: Cargo.toml
src/base/threadpool/: Cargo.toml
src/commands/: Cargo.toml
src/components/: Cargo.toml
src/components/src/: combat.rs  entity_identity.rs  last_chunk_pos.rs  last_synced_position.rs  lib.rs  pathfinder.rs  physical.rs
src/config/: Cargo.toml
src/config/src/: server_config.rs  setup.rs
src/core/: Cargo.toml
src/core/src/: block_properties.rs  block_state_id.rs  lib.rs  pos.rs
src/dashboard/: Cargo.toml
src/dashboard/src/: telemetry.rs
src/data/: Cargo.toml
src/default_commands/: Cargo.toml
src/default_commands/src/: deop.rs  echo.rs  fly.rs  kill.rs  lib.rs  nested.rs  op.rs  permissions.rs  say.rs  spawn.rs  tp.rs
src/entities/: Cargo.toml  build.rs
src/entities/src/: entity_types.rs  lib.rs
src/entities/src/bundles/: mod.rs
src/entities/src/bundles/interactive/: door.rs
src/game_systems/: Cargo.toml
src/game_systems/src/: lib.rs
src/game_systems/src/background/: Cargo.toml
src/game_systems/src/background/src/: chunk_sending.rs  chunk_unloader.rs  connection_killer.rs  cross_chunk_border.rs  day_cycle.rs  destroy_entity.rs  entity_sending.rs  entity_tracking.rs  entity_unloader.rs  lan_pinger.rs  lib.rs  send_entity_updates.rs  world_sync.rs
src/game_systems/src/background/tests/: entity_tracking.rs
src/game_systems/src/interactions/: Cargo.toml
src/game_systems/src/interactions/src/: block_interactions.rs
src/game_systems/src/mobs/: Cargo.toml
src/game_systems/src/mobs/src/: collision_only.rs  gravity_no_drag.rs  ground.rs  lib.rs  pig.rs
src/game_systems/src/packets/: Cargo.toml
src/game_systems/src/packets/src/: chat_message.rs  command.rs  lib.rs  pick_item_from_block.rs  place_block.rs  player_abilities.rs  player_action.rs  player_command.rs  player_input.rs  player_loaded.rs  set_player_position.rs  swing_arm.rs
src/game_systems/src/pathfinding/: Cargo.toml
src/game_systems/src/pathfinding/src/: astar.rs  cost.rs  lib.rs  pathfinder.rs
src/game_systems/src/physics/: Cargo.toml
src/game_systems/src/physics/src/: chunk_boundary.rs  collisions.rs  gravity.rs  lib.rs  velocity.rs
src/game_systems/src/player/: Cargo.toml
src/game_systems/src/player/src/: chunk_calculator.rs  emit_player_joined.rs  entity_spawn.rs  gamemode_change.rs  lib.rs  movement_broadcast.rs  new_connections.rs  player_despawn.rs  player_join_message.rs  player_leave_message.rs  player_spawn.rs  player_swimming.rs  player_tp.rs  send_inventory_updates.rs  update_player_ping.rs
src/game_systems/src/shutdown/: Cargo.toml
src/game_systems/src/shutdown/src/: lib.rs  send_save_message.rs  send_shutdown_packet.rs
src/game_systems/src/world/: Cargo.toml
src/game_systems/tests/: interactions.rs  mobs.rs  physics.rs
src/game_systems/tests/interactions/: block_interactions.rs
src/game_systems/tests/mobs/: chunk_visibility_lifecycle.rs  cross_chunk_persistence.rs  entity_persistence.rs  player_distance_reload.rs
src/game_systems/tests/physics/: collisions.rs  gravity.rs  velocity.rs
src/messages/: Cargo.toml
src/messages/src/: cross_chunk_boundary_event.rs  destroy_entity.rs  entity_spawn.rs  lib.rs  load_chunk_entities.rs  packet_messages.rs  player_join.rs  player_leave.rs  save_chunk_entities.rs
src/net/codec/: Cargo.toml
src/net/encryption/: Cargo.toml
src/net/protocol/: Cargo.toml
src/net/runtime/: Cargo.toml
src/permissions/: Cargo.toml
src/permissions/src/: group.rs  lib.rs  player.rs  tests.rs
src/resources/: Cargo.toml
src/resources/src/: lib.rs
src/state/: Cargo.toml
src/state/src/: lib.rs
src/storage/: Cargo.toml
src/storage/src/: lib.rs  lmdb.rs
src/utils/: Cargo.toml
src/world/: Cargo.toml
src/world/block-placing/: Cargo.toml
src/world/db/: Cargo.toml
src/world/format/: Cargo.toml
src/world/src/: db_wrap.rs  lib.rs
(+72 files in other folders)
