[package]
name = "temper-entities"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { workspace = true }

temper-data = { workspace = true }
temper-components = { workspace = true }
temper-core = { workspace = true }
serde = { workspace = true }

[build-dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }

[lints]
workspace = true
