[package]
name = "temper-game-systems"
edition.workspace = true
version.workspace = true

[dependencies]
background = { path = "./src/background" }
mobs = { path = "./src/mobs" }
pathfinding = { path = "./src/pathfinding" }
packets = { path = "./src/packets" }
physics = { path = "./src/physics" }
player = { path = "./src/player" }
shutdown = { path = "./src/shutdown" }
world = { path = "./src/world" }
interactions = { path = "./src/interactions" }

bevy_ecs = { workspace = true }
temper-commands = { workspace = true }
temper-config = { workspace = true }
temper-scheduler = { workspace = true }

[dev-dependencies]
bevy_math = { workspace = true }
temper-components = { workspace = true }
temper-core = { workspace = true }
temper-entities = { workspace = true }
temper-macros = { workspace = true }
temper-messages = { workspace = true }
temper-state = { workspace = true }

[lints]
workspace = true
