[package]
name = "temper-game-systems"
edition.workspace = true
version.workspace = true

[dependencies]
background = { path = "./src/background" }
mobs = { path = "./src/mobs" }
packets = { path = "./src/packets" }
physics = { path = "./src/physics" }
player = { path = "./src/player" }
shutdown = { path = "./src/shutdown" }
world = { path = "./src/world" }
interactions = { path = "./src/interactions" }

bevy_ecs = { workspace = true }
temper-commands = { workspace = true }
temper-config = { workspace = true }
temper-scheduler = { workspace = true }

[lints]
workspace = true
