[package]
name = "mobs"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { workspace = true }
temper-components = { workspace = true }
temper-entities = { workspace = true }
temper-messages = { workspace = true }
temper-state = { workspace = true }
temper-core = { workspace = true }
bitcode = { workspace = true }
tracing = { workspace = true }
temper-protocol = { workspace = true }
temper-net-runtime = { workspace = true }
temper-macros = { workspace = true }
temper-config = { workspace = true }
paste = { workspace = true }
