[package]
name = "pathfinding"
version = "0.1.0"
edition = "2024"

[dependencies]
temper-core = { workspace = true }
temper-world = { workspace = true }
temper-components = { workspace = true }
rustc-hash = "2"
arrayvec = "0.7"

[dev-dependencies]
temper-state = { workspace = true }
temper-macros = { workspace = true }
temper-data = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
